2005-07-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/totem-volume.c: (totem_volume_scale_new):
	  For some reason, it wants negative stepping if I use _set_inverted()
	  so I will do that.

2005-07-13  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (totem_action_set_mrl_with_warning):
	Fix sensitivity of the volume menu items

============ Version 1.1.3

2005-07-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: add the ASX/ASF changes
	* configure.in: 1.1.3

2005-07-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2005-07-13  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Update mozilla configure checks for changed
	pkg-config name of mozilla trunk, and distribution-specific
	name variations of firefox. Fixes bug #310177.

2005-07-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_drop_files): sort the files before
	pushing them to the playlist when dropping files (Closes: #310203)

2005-07-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	* data/mozilla-viewer.glade:
	* data/totem.glade:
	* src/Makefile.am:
	* src/totem-mozilla-viewer.c: (on_about1_activate),
	(on_video_button_press_event), (cb_vol),
	(totem_embedded_add_children), (cb_data), (totem_volume_create):
	* src/totem-private.h:
	* src/totem-volume.c: (totem_volume_button_get_type),
	(totem_volume_button_class_init), (totem_volume_button_init),
	(totem_volume_button_dispose), (totem_volume_button_new),
	(totem_volume_button_get_value), (totem_volume_button_set_value),
	(totem_volume_button_scroll), (totem_volume_button_press),
	(cb_button_timeout), (cb_button_press), (cb_button_release),
	(totem_volume_release_grab), (cb_dock_press),
	(totem_volume_scale_get_type), (totem_volume_scale_class_init),
	(totem_volume_scale_new), (totem_volume_scale_press),
	(totem_volume_scale_release), (totem_volume_scale_value_changed):
	* src/totem-volume.h:
	* src/totem.c: (update_mrl_label),