@@ -1,3 +1,10 @@
+2005-07-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-properties.c:
+	(bacon_video_widget_properties_init): removed unused struct members
+	* src/totem-mozilla-viewer.c:
+	* src/totem-private.h: fix compilation warnings
+
 2005-07-13  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/totem-volume.c: (totem_volume_scale_new):
